<resources>
    <string name="app_name">Now!</string>
    <string name="app_tag_line">Collaborative anti-procrastination tool</string>

    <string name="loading">Loading</string>

    <string name="onboard_add_friends">Add friends by using invite links</string>
    <string name="onboard_create_task">Tap on circle to start a task</string>
    <string name="onboard_notify">Notify your friends</string>
    <string name="onboard_continue">Tap any where to continue</string>

    <string name="event_hint">What now?</string>
    <string name="timer_elapsed_hint">It has been</string>

    <string name="user_name_input_hint">Username</string>
    <string name="user_pass_input_hint">Password</string>
    <string name="user_submit_text">Go</string>

    <string name="no_friends">You have no friends</string>

    <string name="invite_error_msg">Cannot generate invite link</string>
    <string name="invite_loading">Generating invite link</string>

    <string name="addUser_hint">Enter invite link</string>
    <string name="enter_invite_link">Enter invite link</string>
    <string name="add_friend">Add friend</string>

    <string name="main_tag">MAIN_FRAG_TAG</string>
    <string name="bottom_sheet_tag">BOTTOM_SHEET_FRAG_TAG</string>
    <string name="invite_link_invalid">Please copy a valid invite link, which can be requested from a friend</string>
    <string name="invite_link_user_added">User added successfully</string>
    <string name="invite_link_error">Invite link invalid or network error</string>
    <string name="default_user_name">Noobie</string>
    <string name="app_internet_error">No Internet, please try again later</string>
    <string name="app_fatal_error">Restart application, fatal error</string>
    <string name="app_unknown_error">Unknown error occurred</string>
    <string name="app_network_unreachable_error">Cannot communicate with servers, restart application</string>
    <string name="invite_link_empty">Invite link not available from clipboard</string>
    <string name="user_status_idle">Idle</string>
    <string name="start_timer">Do</string>
    <string name="friends_menu_tag">FRIENDS_MENU</string>

    <string name="user_add_unknow_error">Unknown error occurred</string>
    <string name="invite_key_copied">Key copied to clipboard</string>
    <string name="now_fragment_friends">Friends</string>
    <string name="task_name_hint">Default value is Something</string>
    <string name="task_default_name">Something</string>
    <string name="task_invalid">Invalid task</string>
    <string name="task_start">What are you planning to do?</string>
    <string name="task_unknown_error">Retreival error</string>
    <string name="task_stop_error">Cannot stop timer, try again later</string>
    <string name="task_network_error">Network error, try again later</string>
    <string name="loading_main">Loading</string>
    <string name="confirm_task_end">Do you really want to stop?</string>
    <string name="reset_user">Reset User</string>
    <string name="acknowledgements">Acknowledgements</string>

    <string name="ack_os_used_header">Open source libraries used</string>
    <string name="app_license_header">Open source license</string>
    <string name="ack_icons_used_header">Icons used</string>

    <string name="time_format">"%1$d : %2$d"</string>
    <string name="user_not_found">Cannot find user, check your internet connection or reset your app</string>
</resources>
