<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/onboardingRootView"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:gravity="center"
        android:background="?colorPrimary"
        tools:context=".fragment.OnboardingFragment">

    <TextView
            android:gravity="center"
            android:text="@string/app_name"
            android:textStyle="bold"
            android:textSize="100sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    <TextView
            android:fontFamily="sans-serif-light"
            android:gravity="center"
            android:text="@string/app_tag_line"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    <LinearLayout
            android:layout_marginTop="@dimen/margin_medium"
            android:background="@android:color/white"
            android:orientation="vertical"
            android:padding="@dimen/margin_medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <LinearLayout android:orientation="horizontal" android:layout_width="match_parent"
                      android:layout_height="wrap_content">
            <ImageView android:src="@drawable/ic_user_add" android:layout_width="32dp"
                       android:layout_height="wrap_content"/>
            <TextView android:layout_marginStart="@dimen/margin_medium" android:text="@string/onboard_add_friends"
                      android:layout_weight="1" android:layout_width="0dp" android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
                android:layout_marginTop="@dimen/margin_medium"
                android:layout_marginBottom="@dimen/margin_medium"
                android:orientation="horizontal" android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <ImageView android:src="@android:drawable/ic_menu_gallery" android:layout_width="32dp"
                       android:layout_height="wrap_content"/>
            <TextView android:layout_marginStart="@dimen/margin_medium" android:text="@string/onboard_create_task"
                      android:layout_weight="1" android:layout_width="0dp" android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout android:orientation="horizontal" android:layout_width="match_parent"
                      android:layout_height="wrap_content">
            <ImageView android:src="@android:drawable/sym_action_chat" android:layout_width="32dp"
                       android:layout_height="wrap_content"/>
            <TextView android:layout_marginStart="@dimen/margin_medium" android:text="@string/onboard_notify"
                      android:layout_weight="1" android:layout_width="0dp" android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>
    <TextView
            android:fontFamily="sans-serif-light"
            android:layout_marginTop="@dimen/margin_medium"
            android:layout_gravity="center_horizontal"
            android:text="@string/onboard_continue"
            android:layout_width="wrap_content" android:layout_height="wrap_content"/>
</LinearLayout>