<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragment.AcknowledgementsFragment"
        android:padding="@dimen/margin_medium">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <TextView
                android:text="@string/app_license_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <android.support.v4.widget.NestedScrollView
                android:background="@color/colorNotNow"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_width="match_parent"
                android:layout_height="@dimen/peek_height">
            <TextView
                    android:text="@string/gpl2_license"
                    android:fontFamily="monospace-"
                    android:id="@+id/appLicenseTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
        </android.support.v4.widget.NestedScrollView>

        <TextView
                android:layout_marginTop="@dimen/margin_medium"
                android:text="@string/ack_os_used_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <LinearLayout
                android:id="@+id/oslNameContainer"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"/>

        <TextView
                android:visibility="gone"
                android:layout_marginTop="@dimen/margin_medium"
                android:text="@string/ack_icons_used_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <LinearLayout
                android:visibility="gone"
                android:id="@+id/iconAckContainer"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"/>

    </LinearLayout>
</ScrollView>